# parallel-algorithms

./: .gitignore
influence-maximization/: .gitignore  README.md  build.gradle  settings.gradle
influence-maximization/graphs/: medium.graph  small.graph  tiny.graph
influence-maximization/src/main/kotlin/: IndependentCascade.kt  SeedCalculator.kt  main.kt
influence-maximization/src/main/kotlin/cli/: CLIOptions.kt
influence-maximization/src/main/kotlin/graph/: Graph.kt  Link.kt  Node.kt
influence-maximization/src/main/kotlin/graph/io/: GraphIO.kt  GraphLoader.kt  GraphWriter.kt
influence-maximization/src/main/kotlin/infectionmodels/: IndependentCascade.kt
influence-maximization/src/main/kotlin/seedcalculation/: CalculatorThread.kt  InputMessage.kt  SeedCalculator.kt  ThreadResult.kt
kmeans/: README.md
kmeans/kmeans/: __main__.py  globals.py  kmeans.py  kmeans_core.py  kmeans_distribution.py  kmeans_setup.py  message.py
pagerank/: .gitignore  CMakeLists.txt  README.md
pagerank/in/: above_medium.graph  medium.graph  pages.graph  small.graph
pagerank/include/: graph.hpp  graph_loader.hpp  node.hpp  pagerank_calculator.hpp
pagerank/scripts/: gen.py
pagerank/src/: graph.cpp  graph_loader.cpp  main.cpp  node.cpp  pagerank_calculator.cpp
